@@ -34,30 +34,74 @@ class HTMLBuilder(object):
     BR2 = BR * 2
 
     void_tags = set([
+        # HTML 5.1
         "area",
         "base",
-        "basefont",
         "br",
         "col",
-        "frame",
+        "embed",
         "hr",
         "img",
         "input",
-        "isindex",
+        "keygen",
         "link",
+        "menuitem",
         "meta",
         "param",
+        "source",
+        "track",
+        "wbr",
+        # The following elements are HTML 4.1 (not in the HTML 5.1 spec):
+        "basefont",
+        "frame",
+        "isindex",
         ])
     boolean_attrs = set([
+        "allowfullscreen",
+        "async",
+        "autofocus",
+        "autoplay",
         "checked",
+        "controls",
+        "default",
         "defer",
         "disabled",
+        "formnovalidate",
+        "hidden",
+        "ismap",
+        "itemscope",
+        "loop",
         "multiple",
+        "muted",
+        "novalidate",
+        "open",
         "readonly",
+        "required",
+        "reversed",
+        "scoped",
+        "seamless",
         "selected",
+        "sortable",
+        "typemustmatch",
         ])
     compose_attrs = {
+        "accept": literal(", "),
+        "accept-charset": literal(" "),
+        "accesskey": literal(" "),
         "class": literal(" "),
+        "coords": literal(","),
+        "dropzone": literal(" "),
+        "for": literal(" "),
+        "headers": literal(" "),
+        "itemprop": literal(" "),
+        "itemref": literal(" "),
+        "itemtype": literal(" "),
+        "media": literal(", "),
+        "rel": literal(" "),
+        "sandbox": literal(" "),
+        "sizes": literal(" "),
+        "sorted": literal(" "),
+        "srcset": literal(", "),
         "style": literal("; "),
         }
 
